--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=8887
+
+github.client.id=1742d58812de82693193
+github.client.secret=de2cf4bf745f70c80f347fccf123b8b6ebf7f8c5
+github.redirect.uri=http://localhost:8887/callback
